--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-click==8.1.3
-Flask==2.1.1
-gunicorn==20.1.0
-h11==0.14.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-python-dotenv==1.0.0
-uvicorn==0.22.0
-waitress==2.1.2
-Werkzeug==2.3.4
+Flask==1.1.1
+Jinja2==2.10.3
+gunicorn
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+Cython>=0.29.23
+nltk==3.4.5
+pandas>=0.25.3
+requests==2.25.1
+scikit-learn==0.24.2
+scipy>=1.3.2
+spacy==3.1.2
+numpy==1.19.5
+pickleshare==0.7.5
+chardet==3.0.4
+sklearn==0.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
